<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Intutit_HackBot</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a Messsage</string>
    <string name="button_send">New Invoice</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">Customer</string>
    <string name="hello_world">Hello world!</string>
    <string name="history">History</string>
    <string name="dues">Dues</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_dues">Dues</string>
    <string name="option">Select  Option</string>
    <string name="CustomerDetails">Customer Details </string>
    <string name="okbutton">OK </string>
    <string name="name_hint">Enter Name </string>
    <string name="phone_hint">Contact Number </string>
    <string name="start_scan">Start Scanning </string>
    <string name="manual_entry">Enter Products </string>
    <string name="barcode">Bar Code Scan </string>
    <string name="invoice_gen">BILL </string>
  

</resources>
